--- a/src/app/components/reactive-employee-form/reactive-employee-form.html
+++ b/src/app/components/reactive-employee-form/reactive-employee-form.html
@@ -1,7 +1,10 @@
 <div class="container-fluid mt-1">
+    <app-tabs [tabList]="tabs" [activeTabName]="currentTab" (onTabChange)="getCurrentTab($event)"></app-tabs>
+    <br>
     <div class="row">
         <!-- Table Column -->
-        <div class="col-8">
+        @if (currentTab == 'Employee List') {
+        <div class="col-12">
             <div class="card">
                 <div class="card-header bg-warning text-dark">
                     <h5 class="mb-0">Employee List</h5>
@@ -32,7 +35,9 @@
                                     <td>
                                         <button class="btn btn-sm btn-primary"
                                             (click)="editEmployee(item.employeeId)">Edit</button>
+
                                         <button class="btn btn-sm btn-danger">Delete</button>
+                                        
                                     </td>
                                 </tr>
                                 }
@@ -42,9 +47,8 @@
                 </div>
             </div>
         </div>
-
-        <!-- Form Column -->
-        <div class="col-4">
+        } @else {
+        <div class="col-12">
             <div class="card">
                 <div class="card-header bg-warning text-dark">
                     <h5 class="mb-0">Add/Edit Employee - {{currentEditEmployeeName()}}</h5>
@@ -55,8 +59,8 @@
                             <label for="fullName" class="form-label">Full Name</label>
                             <input type="text" formControlName="fullName" class="form-control" id="fullName"
                                 placeholder="Enter full name">
-                                touched - {{employeeForm.controls['fullName'].touched}} <br>
-                                dirty - {{employeeForm.controls['fullName'].dirty}} <br>
+                            touched - {{employeeForm.controls['fullName'].touched}} <br>
+                            dirty - {{employeeForm.controls['fullName'].dirty}} <br>
                             @if(employeeForm.controls['fullName'].touched) {
                             <div class="text-danger">
                                 <!-- --{{eName.errors | json}} -->
@@ -74,7 +78,7 @@
                             <label for="email" class="form-label">Email</label>
                             <input type="email" formControlName="email" class="form-control" id="email"
                                 placeholder="Enter email">
-                                   @if(employeeForm.controls['email'].touched) {
+                            @if(employeeForm.controls['email'].touched) {
                             <div class="text-danger">
                                 <!-- --{{eName.errors | json}} -->
                                 @if(employeeForm.controls['email'].errors?.['required']){
@@ -146,12 +150,18 @@
                         </div>
 
                         <div class="d-grid gap-2">
-                            <button type="button" [disabled]="employeeForm.invalid" (click)="onSaveEmp()" class="btn btn-success">Save Employee</button>
+                            <button type="button" [disabled]="employeeForm.invalid" (click)="onSaveEmp()"
+                                class="btn btn-success">Save Employee</button>
                             <button type="reset" class="btn btn-secondary">Clear</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
+        }
+
+
+        <!-- Form Column -->
+
     </div>
 </div>
