--- a/src/app/components/vendor-master/vendor-master.html
+++ b/src/app/components/vendor-master/vendor-master.html
@@ -9,18 +9,18 @@
                     <thead>
                         <tr>
                             <th>Sr No</th>
-                            <th>Vendor Name</th>
-                            <th>Contact</th>
-                            <th>Email</th>
-                            <th>Action</th>
+                            <th appHighlight [highLightColor]="'red'">Vendor Name</th>
+                            <th appHighlight [highLightColor]="'orange'">Contact</th>
+                            <th appHighlight [highLightColor]="'blue'">Email</th>
+                            <th appHighlight [highLightColor]="'teal'">Action</th>
                         </tr>
                     </thead>
                     <tbody>
                         @for (item of vendorList(); track $index) {
                         <tr>
                             <td>{{$index+1}}</td>
-                            <td>{{item.vendorName}}</td>
-                            <td>{{item.contactNo}}</td>
+                            <td appHighlight>{{item.vendorName}}</td>
+                            <td>{{item.contactNo | napipe:'--'}}</td>
                             <td>{{item.emailId}}</td>
                             <td>
                                 <button class="btn btn-success" (click)="onEdit(item)">Edit</button>
